--- a/styles/defaut.css
+++ b/styles/defaut.css
@@ -2,7 +2,51 @@
 
 /*
     PALETA DE CORES
-    AZUL CLARO: 
+    CINZA CLARO: 
+    AZUL CLARO: #b5d3ff;
 */
 
-color
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0xp;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+body, html {
+    background-color: rgb(165, 196, 255);
+    height: 100vh;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    background-color: #d8e7ff;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.418);
+}
+
+section#login > div#imagem{
+    display: block;
+    background: #c7ddfd url(../img/jokas.jpg) no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: 220px;
+}
+
+section#login > div#formulario{
+    display: block;
+    padding: 10px;
+}
