--- a/styles/defaut.css
+++ b/styles/defaut.css
@@ -32,7 +32,7 @@ section#login {
     transform: translate(-50%, -50%);
     overflow: hidden;
     background-color: #d8e7ff;
-    width: 250px;
+    width: 300px;
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.418);
@@ -49,4 +49,69 @@ section#login > div#imagem{
 section#login > div#formulario{
     display: block;
     padding: 10px;
+}
+
+div#formulario > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario > p {
+    text-align: center;
+    font-size: 0.8em;
+}
+
+form > div.campo  {
+    height: 34px;
+}
+
+div.campo > label {
+    display: none;
+}
+
+form > input[type=submit] {
+    display: block;
+    margin-top: 10px;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: rgb(26, 145, 72);
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+
+form > input[type=submit]:hover {
+    background-color:rgb(33, 177, 88) ;
+}
+
+form > a.cadastro {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 30px;
+    margin-top: 5px;
+    padding-top: 3px;
+    text-align: center;
+    background-color: #264eff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+form > a.cadastro:hover {
+    background-color: #1d3cc9;
+}
+
+form > a.botao {
+    display: block;
+    margin-top: 10px;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    color: rgb(0, 89, 255);
+    border: none;
+    border-radius: 5px;
 }
