--- a/styles/media-query.css
+++ b/styles/media-query.css
@@ -11,14 +11,22 @@
 
     section#login > div#imagem {
         float: left;
-        width: 30%;
+        width: 40%;
         height: 100vw;
     }
 
     section#login > div#formulario {
         float: right;
-        width: 70%;
+        width: 60%;
         height: 100vw;
+    }
+
+    div#formulario > h1 {
+        font-size: 2.5em;
+    }
+
+    div#formulario > p {
+        font-size: 1.1em;
     }
 }
 
@@ -26,7 +34,7 @@
     body {
         background-image: linear-gradient(to top, rgb(133, 175, 255), rgb(187, 212, 255));
     }
-    
+
     section#login {
         width: 900px;
     }
@@ -42,5 +50,13 @@
         float: right;
         width: 40%;
         height: 100vw;
+    }
+
+    div#formulario > h1 {
+        font-size: 2.5em;
+    }
+
+    div#formulario > p {
+        font-size: 1.1em;
     }
 }
