projeto-login jubs finalizado

--- a/styles/defaut.css
+++ b/styles/defaut.css
@@ -14,7 +14,7 @@
 }
 
 body, html {
-    background-color: rgb(165, 196, 255);
+    background-color: #a5c4ff;
     height: 100vh;
     width: 100vw;
 }
@@ -29,13 +29,14 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
-    background-color: #d8e7ff;
+    background-color: #d6e4ff;
     width: 300px;
     height: 500px;
     border-radius: 20px;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.418);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.301);
+    transform: translate(-50%, -50%);
+    transition: width 0.8s, height 0.4s;
 }
 
 section#login > div#imagem{
@@ -53,20 +54,47 @@ section#login > div#formulario{
 
 div#formulario > h1 {
     text-align: center;
-    margin-bottom: 10px;
+    font-size: 1.8em;
+    margin-bottom: 8px;
+    color: #1d3cc9;
 }
 
 div#formulario > p {
     text-align: center;
     font-size: 0.8em;
+    color: #1d3cc9;
+    margin-bottom: 10px;
 }
 
 form > div.campo  {
+    background-color: rgba(4, 0, 255, 0);
+    display: block;
+    width: 100%;
     height: 34px;
+    margin: 5px 0px;
+    border-radius: 5px;
+
 }
 
 div.campo > label {
     display: none;
+}
+
+div.campo > i {
+    color: #264eff;
+    background-color: #ff000000;
+    font-size: 2em;
+    transform: translateY(-5px);
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    font-size: 1em;
+    height: 100%;
+    border-radius: 5px;
+    width: calc(100% - 45px);
+    transform: translateY(-14px);
 }
 
 form > input[type=submit] {
@@ -108,7 +136,7 @@ form > a.botao {
     display: block;
     margin-top: 10px;
     text-align: center;
-    font-size: 1em;
+    font-size: 0.8em;
     width: 100%;
     height: 40px;
     color: rgb(0, 89, 255);
